<resources>
    <string name="app_name">Smart Library</string>
    <string name="joinnow">Join Now</string>
    <string name="registerwithstudentsemail">Register With Student`s Email</string>
    <string name="login">Login</string>
    <string name="rememberme">Remember me</string>
    <string name="forgetpassword">Forget Password</string>
    <string name="popularproduct">Popular Product</string>
    <string name="browsercategory">Browser Category</string>
    <string name="mechanical">Mechanical</string>
    <string name="mechatronics">Mechatronics</string>
    <string name="garment">Garment</string>
    <string name="economy">Economy</string>
    <string name="accountant">Accountant</string>
    <string name="commerce">Commerce</string>
    <string name="book">Book</string>
    <string name="confirm">Confirm</string>
    <string name="mfg">MFG</string>
    <string name="author">Author</string>
    <string name="expire">EXP</string>
    <string name="borrowed">Borrowed</string>
    <string name="setting">Setting</string>
    <string name="logout">Log Out</string>
    <string name="specializedbook">Specialized Book</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="mybook">My Book</string>
    <string name="account">Account</string>
    <string name="number">Number</string>
    <string name="map">Map</string>
    <string name="reserve">Reserve</string>
    <string name="register">Register</string>
    <string name="waitting">Waitting...</string>
    <string name="choose">Choose</string>
    <string name="fail">Fail</string>
    <string name="bookchoosechooseotherplease">Choosing other book, please</string>
    <string name="successful">Successful</string>
    <string name="wrongpassword">Wrong Password</string>
    <string name="importemail">Import Email</string>
    <string name="importpass">Import Password</string>
    <string name="unregisteredaccount">Unregistered account</string>
    <string name="pleaseregister">Please register</string>
    <string name="importname">Import Name</string>
    <string name="importmajor">Import Major</string>
    <string name="passworddidnotmatch">Password did not match</string>
    <string name="creatingaccount">Creating Account</string>
    <string name="alreadyexist">already exist</string>
    <string name="registeragain">Register Again</string>
    <string name="firstyear">First Year</string>
    <string name="secondyear">Second Year</string>
    <string name="thirdyear">Third Year</string>
    <string name="fourthyear">Fourth Year</string>
    <string name="bookedpleasecomingtolib">You are booked, please coming to library receiving book in locker</string>
    <string name="notification">Smart Library</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="changepassword">Change Password</string>
    <string name="new_password">New PassWord</string>
    <string name="retype_new_password">Retype New Password</string>
</resources>
