<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SachChuyenNganhActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtChuNam1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/firstyear"
                android:background="@color/colorAccent"
                android:textColor="#FFFF"
                android:gravity="center_vertical"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rvNamNhat"/>
            </LinearLayout>
            <TextView
                android:id="@+id/txtChuNam2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/secondyear"
                android:background="@color/colorAccent"
                android:textColor="#FFFF"
                android:gravity="center_vertical"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rvNamHai"/>
            </LinearLayout>
            <TextView
                android:id="@+id/txtChuNam3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/thirdyear"
                android:background="@color/colorAccent"
                android:textColor="#FFFF"
                android:gravity="center_vertical"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rvNamBa"/>
            </LinearLayout>
            <TextView
                android:id="@+id/txtChuNamTu"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/fourthyear"
                android:background="@color/colorAccent"
                android:textColor="#FFFF"
                android:gravity="center_vertical"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rvNamTu"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>