<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorpage">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/txtOutOfStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="out of stock"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="#FFFF"
                android:background="#FF0000"/>
            <ImageView
                android:id="@+id/imgHinhBook"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="#ffff"
                android:src="@mipmap/ic_image_original"
                />
            <TextView
                android:id="@+id/txtNameBook"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:text="Thực tập điện điện tử"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="#0C0C0C"
                android:gravity="center_vertical"
                />
            <RelativeLayout
                android:id="@+id/rltLayOut1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/txtChuSoLuong"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/number"
                    android:textSize="23dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="#050505"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txtSoLuongBook"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_toRightOf="@+id/txtChuSoLuong"
                    android:layout_marginLeft="10dp"
                    android:text="20"
                    android:textSize="23dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="#050505"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txtXemDiaChi"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/map"
                    android:textColor="#FFFF"
                    android:textStyle="bold"
                    android:textSize="30dp"
                    android:layout_toRightOf="@id/txtSoLuongBook"
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="80dp"
                    android:background="#F40707"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txtChuTacGia"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/author"
                    android:textSize="23dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="#050505"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/txtTenTacGia"
                    android:layout_width="450dp"
                    android:layout_height="50dp"
                    android:layout_toRightOf="@+id/txtChuTacGia"
                    android:layout_marginLeft="10dp"
                    android:text="Nguyễn Minh Tuấn"
                    android:textSize="23dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="#050505"
                    android:textStyle="normal"
                    />
            </RelativeLayout>
            <ImageView
                android:id="@+id/imgHinhBook1"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="#ffff"
                android:layout_marginTop="10dp"
                android:src="@mipmap/ic_image_original"
                />
            <ImageView
                android:id="@+id/imgHinhBook2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="#ffff"
                android:layout_marginTop="10dp"
                android:src="@mipmap/ic_image_original"
                />
            <ImageView
                android:id="@+id/imgHinhBook3"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="#ffff"
                android:layout_marginTop="10dp"
                android:src="@mipmap/ic_image_original"
                />
            <Button
                android:id="@+id/btnChonDat"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#F30505"
                android:textColor="#FFFF"
                android:textSize="30dp"
                android:text="@string/book"
                android:layout_marginTop="20dp"
                />
        </LinearLayout>
    </ScrollView>


</LinearLayout>