<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/logoSpkt"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/logospkt_png"/>
        <ImageView
            android:id="@+id/logoKhoa"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/logokhoa"
            android:layout_toRightOf="@+id/logoSpkt"/>
        <ImageView
            android:id="@+id/logoRmult"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/rmul_png"
            android:layout_toRightOf="@+id/logoKhoa"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/TextLogin"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="50dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>
    <EditText
        android:id="@+id/txtEmailJoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextLogin"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="16146221@student.hcmute.edu.vn"
        android:inputType="textEmailAddress"
        android:textSize="20dp"
        android:textColor="#0E0E0E"
        android:drawableLeft="@drawable/ic_account"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/txtPassJoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmailJoin"
        android:inputType="textPassword"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="********"
        android:textSize="20dp"
        android:textColor="#0E0E0E"
        android:drawableLeft="@drawable/ic_lock"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/btnLoginLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassJoin"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="#FFFF"
        android:text="@string/login"/>
    <LinearLayout
        android:id="@+id/Linear_Layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassJoin"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/ckbRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rememberme"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/txtForgetPassWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/forgetpassword"
            android:textColor="@color/colorAccent"
            />

    </LinearLayout>



</RelativeLayout>