<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F6F3F3">
            <ImageView
                android:id="@+id/imgHinhBorrow"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_menu_gallery"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:id="@+id/txtNameBookBorrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/imgHinhBorrow"
                android:layout_marginLeft="20dp"
                android:text="Name"
                android:textColor="#0E0E0E"
                android:textSize="20dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/txtIdBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/imgHinhBorrow"
                android:layout_marginLeft="20dp"
                android:layout_below="@+id/txtNameBookBorrow"
                android:text="id"
                android:textColor="#0E0E0E"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/txtChuTacGiaBorrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtIdBook"
                android:layout_toRightOf="@+id/imgHinhBorrow"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/author"
                android:textColor="#000000"
                android:textSize="15dp"
                />

            <TextView
                android:id="@+id/txtTenTacGiaBorrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/txtChuTacGiaBorrow"
                android:layout_below="@+id/txtIdBook"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:text="Nguyễn Minh Tuấn"
                android:textColor="#151515"
                android:textSize="15dp"
                />
            <TextView
                android:id="@+id/txtChuDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtChuTacGiaBorrow"
                android:layout_toRightOf="@+id/imgHinhBorrow"
                android:layout_marginLeft="20dp"
                android:text="@string/mfg"
                android:textColor="#72CF06"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/txtChuDate"
                android:layout_below="@+id/txtTenTacGiaBorrow"
                android:layout_marginTop="5dp"
                android:text="10-10-2020"
                android:textSize="15dp"
                android:layout_marginLeft="5dp"
                android:textColor="#78DD01"
                />
            <TextView
                android:id="@+id/txtChuExpire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtChuDate"
                android:layout_toRightOf="@+id/imgHinhBorrow"
                android:layout_marginLeft="20dp"
                android:text="@string/expire"
                android:textColor="#EC0909"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:id="@+id/txtExpire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/txtChuExpire"
                android:layout_below="@+id/txtDate"
                android:layout_marginTop="5dp"
                android:text="10-10-2020"
                android:textSize="15dp"
                android:layout_marginLeft="5dp"
                android:textColor="#FF0707"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>